--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <main>
 
-    <div class="container-md p-5">
+    <div class="container-fluid p-5">
 
       <div class="row text-center">
 
@@ -52,36 +52,7 @@
             <!-- Main Display -->
             <div class="my-carousel-images">
 
-              <!-- Titles Objects -->
-
-              <!-- immagine 1 -->
-              <div class="my-carousel-item active" carousel-item="1">
-                <img class="img-fluid" src="./img/01.webp" alt="Marvel's Spiderman Miles Morale picture" />
-                <div class="item-description px-3">
-                  <h2>Marvel's Spiderman Miles Morale</h2>
-                  <p>
-                    Experience the rise of Miles Morales as the new hero
-                    masters incredible, explosive new powers to become his own
-                    Spider-Man.
-                  </p>
-                </div>
-              </div>
-              <!-- /immagine 1 -->
-
-              <!-- immagine 2 -->
-              <div class="my-carousel-item" carousel-item="1">
-                <img class="img-fluid" src="./img/02.webp" alt="Ratchet & Clank: Rift Apart" />
-                <div class="item-description px-3">
-                  <h2>Ratchet & Clank: Rift Apart</h2>
-                  <p>
-                    Go dimension-hopping with Ratchet and Clank as they take
-                    on an evil emperor from another reality.
-                  </p>
-                </div>
-              </div>
-              <!-- /immagine 2 -->
-
-              <!-- /Titles Objects -->
+              
 
             </div>
             <!-- Main Display -->
@@ -140,6 +111,9 @@
     </div>
 
   </main>
+
+  <script src="./js/functions.js"></script>
+  <script src="./js/main.js"></script>
 
 </body>
 
